syntax = "proto3";

option go_package = "golang-grpc/common/orders";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrdersList (GetOrdersRequest) returns (GetOrdersResponse) {}
}

message Order {
  string ID = 1;
  string CustomerID = 2;
  string ProductID = 3;
  int32 Quantity = 4;
}

message CreateOrderRequest {
  string customerID = 1;
  string productID = 2;
  int32 quantity = 3;
}

enum CreateStatus {
  ORDER_CREATED = 0;
  ORDER_CANCELED = 1;
}

message CreateOrderResponse {
  string status = 1;
}

message GetOrdersRequest {
  string customerID = 1;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}